Release Notes

* 12/31/2015
  * fixed CF to use nFilesForScout for toupdate in scouting

* 12/16/2015
  * changed restartTasksForCF to restart defined tasks with only ready DSs

* 12/15/2015
  * using roundi up for the brokerage as well
  * added protection against nFilesPerJob=0 and nEventsPerJob=0

* 12/9/2015
  * rounding up job.minramcount with 500MB chunks

* 12/8/2015
  * fixed PP to go finished instead of exhausted if goal is reached
  * changed AtlasPJB to send pmerge to anywhere after 24h

* 12/7/2015
  * removed validationrelease from AtlasPJB
  * enabled duplication check for production

* 11/27/2015
  * fixed for reassignTask not to make subscriptions for distributed datasets 
  * removed offet for zero events in getEffectiveNumEvents

* 11/23/2015
  * added updateJobMetrics
  * fixed nEventsPerMergeJob

* 11/19/2015
  * changed AtlasPP to delete empty datasets
  * fixed AtlasPTB for WORLD + no output
  * changed getScout to ignore jobs with nEvents<10

* 11/18/2015
  * fixed AtlasPTB for WORLD

* 11/16/2015
  * changed getScout to fill IO info

* 11/13/2015
  * fixed AtlasPTB for negative t1Weight in WORLD
  * changed AtlasPTB for all prod jobs to respect fairsharepolicy 

* 11/11/2015
  * fixed AtlasPTB for missing nuclei in RW
  * added protection to RW calculation against cpuTime=NULL
  * changed AtlasAJB to take wansinklimit into account for WAN weight

* 11/10/2015
  * changed prod/anal prokerages to use max/minrss

* 11/9/2015
  * changed JG to avoid passing parallelOutMap to TB

* 11/6/2015
  * removed T1 constraint for ES job brokerage
  * changed AtlasPTB to use confgurator tables
  * using jobseed=std by default
  * changed AtlasPTB to take size of expired secondaries into account

* 11/5/2015
  * changed jobseed=all when switchEStoNormal is not used

* 11/4/2015
  * changed JG to remove job parameters for empty streams

* 11/2/2015
  * giving a smaller weight to tape for analy

* 10/27/2015
  * tweaked freezeDataset to avoid a rucio bug